--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-select": "^4.0.15",
     "@types/uuid": "^8.3.0",
     "cookies-js": "^1.2.3",
     "polished": "^4.1.2",
@@ -11,6 +12,7 @@
     "react-icons": "^4.2.0",
     "react-modal": "^3.13.1",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2"
   },
